package Artists;

/**
  *define an artist with its name, age, genre and awards
 */
public interface Common {

  /**
   * append the new award to the original array
   * @param award, artist's new award
   */
  void receiveAward(String award);


}
