package Artists;

public class Painter extends VisualArtists{
  /**
   * super constructor for Artists.Painter
   * @param name
   * @param age
   * @param genres
   * @param awards
   * @param exhibits
   */
  public Painter (String name, int age, String[] genres, String[] awards, String[] exhibits){
    super(name, age, genres, awards, exhibits);
  }

}
